[package]
name = "timeskwire"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
docopt = "0.8"
env_logger = "0.5"
failure = "0.1"
libc = "0.2"
log = "0.4"
pdf-canvas = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
palette = "0.4"
