[package]
name = "timeskwire"
description = "A lean and mean PDF reporting engine for TimeWarrior"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
repository = "https://github.com/drozdziak1/timeskwire"
readme = "README.md"
keywords = ["timewarrior", "timew", "time", "tracking", "pdf"]
categories = ["command-line-utilities", "rendering", "visualization"]
license = "BSD-3-Clause"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "drozdziak1/timeskwire" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
docopt = "0.8"
env_logger = "0.5"
failure = "0.1"
libc = "0.2"
log = "0.4"
pdf-canvas = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
palette = "0.4"
